BUG #9056 Changes to patch #2 per Serg's review

client/mysqldump.c:
  BUG #9056 Fixes per serg
  * if opt_lock for locking mysql.proc
  * calling mysql_query_with_error_report where needed
  * print functions same way as procs, file bug about commented functions
mysql-test/r/mysqldump.result:
  BUG #9056 New results
mysql-test/t/mysqldump.test:
  BUG #9056 Removed redirect, simplified, dump in results, per Serg